--- a/WebApplication/templates/pages/placeholder.about.html
+++ b/WebApplication/templates/pages/placeholder.about.html
@@ -32,7 +32,7 @@
     //         "translate(" + margin.left + "," + margin.top + ")");
   
   //Read the data
-  d3.csv("/static/data/Data1.csv",function(data) {
+  d3.csv("/static/data/Data.csv",function(data) {
       console.log(data);
       console.log(d3.extent(data, function(d) { return +d.I; }));
       console.log(d3.extent(data, function(d) { return +d.S; }));
