--- a/WebApplication/templates/pages/placeholder.about.html
+++ b/WebApplication/templates/pages/placeholder.about.html
@@ -43,7 +43,13 @@
         .range([ 0, width ]);
       svg.append("g")
         .attr("transform", "translate(0," + height + ")")
-        .call(d3.axisBottom(x));
+        .call(d3.axisBottom(x))
+        .append("text")
+          // .attr("class","label")
+          .attr("x",width/2)
+          .attr("y", 35)
+          .style("text-anchor","middle")
+          .text("Frame");
   
       // Add Y axis
       var y = d3.scaleLinear()
@@ -51,7 +57,12 @@
         .range([ height, 0 ]);
       svg.append("g")
         .call(d3.axisLeft(y))
-        .text("Area");
+        .append("text")
+          // .attr("class","label")
+          .attr("x",width/2)
+          .attr("y", 35)
+          .style("text-anchor","middle")
+          .text("Area");
   
       // Add the line
       svg.append("path")
@@ -70,7 +81,13 @@
         .range([ 0, width ]);
       svg2.append("g")
         .attr("transform", "translate(0," + height + ")")
-        .call(d3.axisBottom(x));
+        .call(d3.axisBottom(x))
+        .append("text")
+          // .attr("class","label")
+          .attr("x",width/2)
+          .attr("y", 35)
+          .style("text-anchor","middle")
+          .text("Frame");
 
       // Add Y axis
       var y = d3.scaleLinear()
@@ -78,7 +95,12 @@
         .range([ height, 0 ]);
       svg2.append("g")
         .call(d3.axisLeft(y))
-        .text("Height");
+        .append("text")
+          // .attr("class","label")
+          .attr("x",width/2)
+          .attr("y", 35)
+          .style("text-anchor","middle")
+          .text("Height");
 
       // Add the line
       svg2.append("path")
