--- a/WebApplication/templates/pages/upload.html
+++ b/WebApplication/templates/pages/upload.html
@@ -1,10 +1,19 @@
 {% extends 'layouts/main.html' %}
-{% block title %}Home{% endblock %}
+{% block title %}upload{% endblock %}
 {% block content %}
 
-<div class="page-header">
-  <h1>Upload your recorded video here</h1>
-</div>
-<form action="myform.cgi"> <input type="file" name="fileupload" value="fileupload" id="fileupload"> <label for="fileupload"> Select a file to upload</label> <input type="submit" value="submit"> </form>
+<!--<div class="page-header">-->
+<!--  <h1>Upload your recorded video here</h1>-->
+<!--</div>-->
+<!--<form action="myform.cgi"> <input type="file" name="fileupload" value="fileupload" id="fileupload"> <label for="fileupload"> Select a file to upload</label> <input type="submit" value="submit"> </form>-->
+
+
+<h1>Upload new File</h1>
+<form action='' method="POST" enctype="multipart/form-data">
+    <p><input type='file' name='profile[]' multiple=''>
+    <input type='submit' value='upload'>
+    </p>
+
+</form>
 
 {% endblock %}
