--- a/WebApplication/_updated/app/templates/layouts/main.html
+++ b/WebApplication/_updated/app/templates/layouts/main.html
@@ -54,6 +54,8 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
+            <li><a href="/upload">upload</a></li>
+            <li><a href="/BoundingBox">BoundingBox</a></li>
           </ul>
           <ul class="nav navbar-nav pull-right">
             <li class="dropdown">
