--- a/WebApplication/templates/pages/placeholder.home.html
+++ b/WebApplication/templates/pages/placeholder.home.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 <div class="page-header">
-  <h1>Upload your recorded video here</h1>
+  <h1>Please Upload your Fire Video To Get Data</h1>
 </div>
-<form action="myform.cgi"> <input type="file" name="fileupload" value="fileupload" id="fileupload"> <label for="fileupload"> Select a file to upload</label> <input type="submit" value="submit"> </form>
+<!--<form action="myform.cgi"> <input type="file" name="fileupload" value="fileupload" id="fileupload"> <label for="fileupload"> Select a file to upload</label> <input type="submit" value="submit"> </form>-->
 
 {% endblock %}
