--- a/WebApplication/templates/pages/BoundingBox.html
+++ b/WebApplication/templates/pages/BoundingBox.html
@@ -3,11 +3,17 @@
 {% block content %}
 
 <h1>Bounding Box of the Fire Video</h1>
-<form action='' method="POST" enctype="multipart/form-data">
-<!--    <p><input type='file' name='profile[]' multiple=''>-->
-    <input type='submit' value='BoundingBox'>
-<!--    </p>-->
+<!--<form action='' method="POST" enctype="multipart/form-data">-->
+<!--    <input type='submit' value='BoundingBox'>-->
+<!--</form>-->
+<!--<form action="/Bounding" method="POST">-->
+<!--    <button name="BoundingBox" type="submit">BoundingBox</button>-->
+<!--</form>-->
 
-</form>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"> </script>
+<script type=text/javascript> $(function() { $("#mybutton").click(function (event) { $.getJSON('/Bounding', { },
+    function(data) { }); return false; }); }); </script>
+
+<input type = "button" id = "mybutton" value = "Click Here" />
 
 {% endblock %}
