--- a/WebApplication/templates/pages/placeholder.home.html
+++ b/WebApplication/templates/pages/placeholder.home.html
@@ -2,9 +2,12 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 
-<div class="page-header">
-  <h1>Please Upload your Fire Video To Get Data</h1>
-</div>
+<!--<div class="page-header">-->
+<!--  <h1>Please Upload your Fire Video To Get Data</h1>-->
+<!--</div>-->
+
 <!--<form action="myform.cgi"> <input type="file" name="fileupload" value="fileupload" id="fileupload"> <label for="fileupload"> Select a file to upload</label> <input type="submit" value="submit"> </form>-->
+
+<img src="{{url_for('static', filename='background.gif')}}" align="middle" style="width:100%"/>
 
 {% endblock %}
