--- a/WebApplication/templates/pages/placeholder.home.html
+++ b/WebApplication/templates/pages/placeholder.home.html
@@ -8,6 +8,8 @@
 
 <!--<form action="myform.cgi"> <input type="file" name="fileupload" value="fileupload" id="fileupload"> <label for="fileupload"> Select a file to upload</label> <input type="submit" value="submit"> </form>-->
 
-<img src="{{url_for('static', filename='background.gif')}}" align="middle" style="width:100%"/>
+<!--<img src="{{url_for('static', filename='background.gif')}}"  style="width:100%"/>-->
+
+<img src="{{url_for('static', filename='background.gif')}}"  style="width:100%"/>
 
 {% endblock %}
