--- a/WebApplication/templates/layouts/main.html
+++ b/WebApplication/templates/layouts/main.html
@@ -58,18 +58,18 @@
             <li {% if request.endpoint == 'CallFlameShape' %} class="active" {% endif %}><a href="{{ url_for('CallFlameShape') }}">FlameShape</a></li>
             <li {% if request.endpoint == 'Visualization' %} class="active" {% endif %}><a href="{{ url_for('Visualization') }}">Visualization</a></li>
             <li {% if request.endpoint == 'download' %} class="active" {% endif %}><a href="{{ url_for('download') }}">Download</a></li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a>Action</a></li>
-                <li><a>Another action</a></li>
-                <li><a>Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a>Separated link</a></li>
-                <li><a>One more separated link</a></li>
-              </ul>
-            </li>
+<!--            <li class="dropdown">-->
+<!--              <a class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>-->
+<!--              <ul class="dropdown-menu">-->
+<!--                <li><a>Action</a></li>-->
+<!--                <li><a>Another action</a></li>-->
+<!--                <li><a>Something else here</a></li>-->
+<!--                <li class="divider"></li>-->
+<!--                <li class="dropdown-header">Nav header</li>-->
+<!--                <li><a>Separated link</a></li>-->
+<!--                <li><a>One more separated link</a></li>-->
+<!--              </ul>-->
+<!--            </li>-->
           </ul>
           <ul class="nav navbar-nav pull-right">
             <li><a href="{{ url_for('register') }}">Signup</a></li>
@@ -78,6 +78,7 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
+
 
     <!-- Begin page content -->
     <main id="content" role="main" class="container">
@@ -101,7 +102,7 @@
 
   <div id="footer">
     <div class="container">
-      <p>Your Company &copy; All Rights Reserved.</p>
+      <p>Meijie Wang &copy; Worcester Polytechnic Institute.</p>
       {% block footer %}{% endblock %}
     </div>
   </div>
@@ -118,6 +119,7 @@
     load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
   });
   </script>
+
 
 </body>
 </html>
