--- a/WebApplication/static/css/layout.main.css
+++ b/WebApplication/static/css/layout.main.css
@@ -4,24 +4,31 @@
 html,
 body {
   height: 100%;
+  width: 100%;
   /* The html and body elements cannot have any padding or margin. */
 }
 
 /* Wrapper for page content to push down footer */
 #wrap {
+  background-color: black;
   min-height: 100%;
-  height: auto !important;
+  /*height: auto !important;*/
   height: 100%;
   /* Negative indent footer by its height */
-  margin: 0 auto -60px;
+  margin: 0 0 -50px;
   /* Pad bottom by footer height */
-  padding: 0 0 60px;
+  padding: 0 0 10px;
+
 }
 
 /* Set the fixed height of the footer here */
 #footer {
-  height: 60px;
-  background-color: #f5f5f5;
+  height: 50px;
+  background-color: black;
+}
+
+#content {
+  background-color:black;
 }
 
 
@@ -30,15 +37,16 @@ body {
 /* Not required for template or sticky footer method. */
 
 #wrap > .container {
-  padding: 60px 15px 0;
+  padding:50px 0 0;
+  background-color: black;
 }
 .container .credit {
-  margin: 20px 0;
+  margin: 0 0;
 }
 
 #footer > .container {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 code {
