--- a/WebApplication/templates/layouts/main.html
+++ b/WebApplication/templates/layouts/main.html
@@ -102,7 +102,7 @@
 
   <div id="footer">
     <div class="container">
-      <p>Meijie Wang &copy; Worcester Polytechnic Institute.</p>
+      <p style="color: #686868;">Meijie Wang &copy; Worcester Polytechnic Institute.</p>
       {% block footer %}{% endblock %}
     </div>
   </div>
