--- a/WebApplication/static/css/layout.main.css
+++ b/WebApplication/static/css/layout.main.css
@@ -5,6 +5,7 @@ html,
 body {
   height: 100%;
   width: 100%;
+  background-color: black;
   /* The html and body elements cannot have any padding or margin. */
 }
 
