--- a/WebApplication/templates/pages/placeholder.home.html
+++ b/WebApplication/templates/pages/placeholder.home.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <!--<div class="page-header">-->
-  <h1>Please Upload your Fire Video To Get Data</h1>
+  <h1 style="color: #888787;">Please Upload your Fire Video To Get Data</h1>
 <!--</div>-->
 
 <!--<form action="myform.cgi"> <input type="file" name="fileupload" value="fileupload" id="fileupload"> <label for="fileupload"> Select a file to upload</label> <input type="submit" value="submit"> </form>-->
