--- a/WebApplication/templates/pages/upload.html
+++ b/WebApplication/templates/pages/upload.html
@@ -2,13 +2,16 @@
 {% block title %}upload{% endblock %}
 {% block content %}
 
-<h1>Upload new File</h1>
+<h1 style="color: #ABA9A9;">Upload New Video Here</h1>
 <form action='' method="POST" enctype="multipart/form-data">
-    <p><input type='file' name='profile[]' multiple=''>
-    <input type='submit' value='upload'>
+    <p><input type='file' name='profile[]' multiple='' >
     </p>
+        <input type='submit' value='upload'>
 </form>
 
+<img src="{{url_for('static', filename='candle_1.gif')}}">
+<img src="{{url_for('static', filename='candle_2.gif')}}">
+<img src="{{url_for('static', filename='candle_3.gif')}}">
 <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"> </script>-->
 <!--<script type=text/javascript> $(function() { $("#mybutton").click(function (event) { $.getJSON('/Bounding', { },-->
 <!--    function(data) { }); return false; }); }); </script>-->
