--- a/WebApplication/templates/layouts/main.html
+++ b/WebApplication/templates/layouts/main.html
@@ -54,6 +54,7 @@
           <ul class="nav navbar-nav">
             <li {% if request.endpoint == 'home' %} class="active" {% endif %}><a href="{{ url_for('home') }}">Home</a></li>
             <li {% if request.endpoint == 'upload' %} class="active" {% endif %}><a href="{{ url_for('upload') }}">Upload</a></li>
+            <li {% if request.endpoint == 'Video' %} class="active" {% endif %}><a href="{{ url_for('Video') }}">Video</a></li>
             <li {% if request.endpoint == 'BoundingBox' %} class="active" {% endif %}><a href="{{ url_for('BoundingBox') }}">BoundingBox</a></li>
             <li {% if request.endpoint == 'CallFlameShape' %} class="active" {% endif %}><a href="{{ url_for('CallFlameShape') }}">FlameShape</a></li>
             <li {% if request.endpoint == 'Visualization' %} class="active" {% endif %}><a href="{{ url_for('Visualization') }}">Visualization</a></li>
