--- a/WebApplication/templates/pages/visualization.html
+++ b/WebApplication/templates/pages/visualization.html
@@ -3,24 +3,80 @@
 {% block content %}
 
 <div class="page-header">
-  <h1>Visualization</h1>
+  <h1 style="color: #ABA9A9;">Visualization</h1>
 </div>
 <div id="Area"></div>
 <style>
-  .label{
-  fill:black;
+ .label{
   font-family:"Times New Roman", Times, serif;
-  font-size:12px;
+  font-size:15px;
+  stroke: #ABA9A9;
+}
+  .axis{
+    text-align: center;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 10px;
+    /*font-style: italic;*/
+    font-weight: 400;
+    /*stroke-width: 0.5px;*/
+    stroke:#ABA9A9;
+    fill:white;
+  }
+  .axis path,
+  .axis line{
+    fill:none;
+    stroke:white;
+    stroke-width:2px;
+    shape-rendering:optimizeSpeed;
+  }
+  .axis-title{
+    text-align: center;
+    font-family: georgia, "Times New Roman", serif;
+    font-size: 10px;
+    font-style: italic;
+    font-weight: 400;
+    stroke-width:0.5px;
+    fill:white;
+    stroke:white;
+    text-shadow: 0 1px 0 rgba(117, 114, 114, 0.6);
+    text-transform: capitalize;
+    shape-rendering:optimizeSpeed;
+    opacity:0.8;
+  }
+  .focus circle {
+  fill: white;
+  stroke: white;
+  stroke-width: 5px;
+}
+  .focus{
+    text-align: center;
+    font-family: georgia, "Times New Roman", serif;
+    font-size: 15px;
+    font-style: italic;
+    font-weight: 400;
+    stroke-width:0.5px;
+    fill:white;
+    stroke:white;
+  }
+  .hover-line {
+  stroke: white;
+  stroke-width: 2px;
+  stroke-dasharray: 3,3;
+}
+  .overlay {
+  fill: none;
+  pointer-events: all;
 }
 </style>
 
 <script src="https://d3js.org/d3.v4.js"></script>
+<!--<scripy>{{passFile}}</scripy>-->
 <script>
   // set the dimensions and margins of the graph
   var margin = {top: 10, right: 30, bottom: 30, left: 60},
       width = 1260 - margin.left - margin.right,
       height = 300 - margin.top - margin.bottom;
-  
+
   // append the svg object to the body of the page
   var svg = d3.select("#Area")
     .append("svg")
@@ -39,7 +95,8 @@
             "translate(" + margin.left + "," + margin.top + ")");
   
   //Read the data
-  d3.csv("/static/data/4cm_test.csv",function(data) {
+  d3.csv("../../static/data/{{passFile}}.csv",function(data) {
+  // d3.csv("../../static/data/CandleFire.csv",function(data) {
       console.log(data);
       console.log(d3.extent(data, function(d) { return +d.I; }));
       console.log(d3.extent(data, function(d) { return +d.S; }));
@@ -50,12 +107,14 @@
         //       .domain([0,400])
         .range([ 0, width ]);
       svg.append("g")
+        .attr("class","axis")
         .attr("transform", "translate(0," + height + ")")
         .call(d3.axisBottom(x))
-        .append("text").attr("class","label")
+        .append("text").attr("class","axis-title")
           .attr("x",width-15)
-          .attr("y", -5)
+          .attr("y", 20)
           .style("text-anchor","middle")
+          // .style("color","white")
           .text("Frame");
   
       // Add Y axis
@@ -64,10 +123,11 @@
         //       .domain([0,30000])
         .range([ height, 0 ]);
       svg.append("g")
+        .attr("class","axis")
         .call(d3.axisLeft(y))
         .append("text")
-          .attr("class","label")
-          .attr("x",20)
+          .attr("class","axis-title")
+          .attr("x",-20)
           .attr("y", 10)
           .style("text-anchor","middle")
           .text("Area");
@@ -83,32 +143,81 @@
           .y(function(d) { return y(d.S) })
           )
 
+    var focus = svg.append("g")
+        .attr("class", "focus")
+        .style("display", "none");
+
+    focus.append("line")
+        .attr("class", "x-hover-line hover-line")
+        .attr("y1", 0)
+        .attr("y2", height);
+
+    focus.append("line")
+        .attr("class", "y-hover-line hover-line")
+        .attr("x1", width)
+        .attr("x2", width);
+
+    focus.append("circle")
+        .attr("r", 2.5);
+
+    focus.append("text")
+        .attr("x", 15)
+      	.attr("dy", ".31em");
+
+    svg.append("rect")
+        .attr("transform", "translate(" + 0 + "," + margin.top + ")")
+        .attr("class", "overlay")
+        .attr("width", width)
+        .attr("height", height)
+        .on("mouseover", function() { focus.style("display", null); focus2.style("display", null);})
+        .on("mouseout", function() { focus.style("display", "none"); focus2.style("display", "none");})
+        .on("mousemove", mousemove);
+
+    var bisect = d3.bisector(function(d) { return d.I; }).left;
+    function mousemove() {
+      var x0 = x.invert(d3.mouse(this)[0]),
+          i = bisect(data, x0, 1),
+          d0 = data[i - 1],
+          d1 = data[i],
+          d = x0 - d0.I > d1.I - x0 ? d1 : d0;
+      focus.attr("transform", "translate(" + x(d.I) + "," + y(d.S) + ")");
+      focus.select("text").text(function() { return "Area:"+ d.S+"Pixels"; });
+      focus.select(".x-hover-line").attr("y2", height - y(d.S));
+      focus.select(".y-hover-line").attr("x2", width+width);
+      focus2.attr("transform", "translate(" + x2(d.I) + "," + y2(d.H) + ")");
+      focus2.select("text").text(function() { return "Height:"+d.H+"Pixels"; });
+      focus2.select(".x-hover-line").attr("y2", height - y2(d.H));
+      focus2.select(".y-hover-line").attr("x2", width+width);
+    }
+
     // Add X axis --> it is a date format
     //      var x = d3.scaleTime()
-      var x = d3.scaleLinear()
+      var x2 = d3.scaleLinear()
         .domain(d3.extent(data, function(d) { return +d.I; }))
         //       .domain([0,400])
         .range([ 0, width ]);
       svg2.append("g")
+        .attr("class","axis")
         .attr("transform", "translate(0," + height + ")")
         .call(d3.axisBottom(x))
         .append("text")
-          .attr("class","label")
+          .attr("class","axis-title")
           .attr("x",width-15)
-          .attr("y", -5)
+          .attr("y", 20)
           .style("text-anchor","middle")
           .text("Frame");
 
       // Add Y axis
-      var y = d3.scaleLinear()
+      var y2 = d3.scaleLinear()
         .domain(d3.extent(data, function(d) { return +d.H; }))
         //       .domain([0,600])
         .range([ height, 0 ]);
       svg2.append("g")
+        .attr("class","axis")
         .call(d3.axisLeft(y))
         .append("text")
-          .attr("class","label")
-          .attr("x",20)
+          .attr("class","axis-title")
+          .attr("x",-20)
           .attr("y", 10)
           .style("text-anchor","middle")
           .text("Height");
@@ -117,12 +226,64 @@
       svg2.append("path")
         .datum(data)
         .attr("fill", "none")
-        .attr("stroke", "red")
+        .attr("stroke", "#F5B041 ")
+        .attr("opacity", 0.8)
         .attr("stroke-width", 1.5)
         .attr("d", d3.line()
-          .x(function(d) { return x(d.I) })
-          .y(function(d) { return y(d.H) })
-          )
+          .x(function(d) { return x2(d.I) })
+          .y(function(d) { return y2(d.H) })
+          );
+
+    var focus2 = svg2.append("g")
+        .attr("class", "focus")
+        .style("display", "none");
+
+    focus2.append("line")
+        .attr("class", "x-hover-line hover-line")
+        .attr("y1", 0)
+        .attr("y2", height);
+
+    focus2.append("line")
+        .attr("class", "y-hover-line hover-line")
+        .attr("x1", width)
+        .attr("x2", width);
+
+    focus2.append("circle")
+        .attr("r", 2.5);
+
+    focus2.append("text")
+        .attr("x", 15)
+      	.attr("dy", ".31em");
+
+    svg2.append("rect")
+        .attr("transform", "translate(" + 0 + "," + margin.top + ")")
+        .attr("class", "overlay")
+        .attr("width", width)
+        .attr("height", height)
+        .on("mouseover", function() { focus2.style("display", null); focus.style("display", null); })
+        .on("mouseout", function() { focus2.style("display", "none"); focus.style("display", "none"); })
+        .on("mousemove", mousemove2);
+
+    var bisect2 = d3.bisector(function(d) { return d.I; }).left;
+    function mousemove2() {
+      var x0 = x2.invert(d3.mouse(this)[0]),
+          i = bisect2(data, x0, 1),
+          d0 = data[i - 1],
+          d1 = data[i],
+          d = x0 - d0.I > d1.I - x0 ? d1 : d0;
+      // console.log(x(d.I));
+      // console.log(y(d.H));
+      focus2.attr("transform", "translate(" + x2(d.I) + "," + y2(d.H) + ")");
+      focus2.select("text").text(function() { return "Height:"+d.H+"Pixels"; });
+      focus2.select(".x-hover-line").attr("y2", height - y2(d.H));
+      focus2.select(".y-hover-line").attr("x2", width+width);
+      console.log(y(d.S));
+      focus.attr("transform", "translate(" + x(d.I) + "," + y(d.S) + ")");
+      focus.select("text").text(function() { return "Area:"+ d.S+"Pixels"; });
+      focus.select(".x-hover-line").attr("y2", height - y(d.S));
+      focus.select(".y-hover-line").attr("x2", width+width);
+    }
+
   })
   </script>
 
