--- a/WebApplication/templates/pages/upload.html
+++ b/WebApplication/templates/pages/upload.html
@@ -6,14 +6,21 @@
 <form action='' method="POST" enctype="multipart/form-data">
     <p><input type='file' name='profile[]' multiple='' >
     </p>
-        <input type='submit' value='upload'>
+        <input type='submit'  value='upload'>
+    <input type = "button" id = "mybutton" value = "Process"/>
 </form>
+
+
+
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"> </script>
+<script type=text/javascript> $(function() { $("#mybutton").click(function (event) { $.getJSON('/Bounding', { },
+    function(data) { }); return false; }); }); </script>
+
+<script> console.log(passFile)</script>
 
 <img src="{{url_for('static', filename='candle_1.gif')}}">
 <img src="{{url_for('static', filename='candle_2.gif')}}">
 <img src="{{url_for('static', filename='candle_3.gif')}}">
-<!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"> </script>-->
-<!--<script type=text/javascript> $(function() { $("#mybutton").click(function (event) { $.getJSON('/Bounding', { },-->
-<!--    function(data) { }); return false; }); }); </script>-->
+
 
 {% endblock %}
