--- a/WebApplication/templates/pages/playground.html
+++ b/WebApplication/templates/pages/playground.html
@@ -2,9 +2,14 @@
 {% block title %}playground{% endblock %}
 {% block content %}
 
-<div class="page-header">
+<!--<div class="page-header">-->
   <h1 style="color: #ABA9A9;">Playground</h1>
-</div>
+<!--</div>-->
+<img src="{{url_for('static', filename='4cm.gif')}}">
+<img src="{{url_for('static', filename='6cm.gif')}}">
+<img src="{{url_for('static', filename='10cm.gif')}}">
+<img src="{{url_for('static', filename='candle.gif')}}">
+<img src="{{url_for('static', filename='Lab.gif')}}">
 <div id="Area"></div>
 <style>
  .label{
